# zabbix-cli-ent

./: .coveragerc  .gitignore  HACKING.rst  README.rst  requirements.txt  setup.cfg
doc/source/: conf.py  index.rst  installation.rst
zm/: __init__.py  commands.py  config.py  exception.py  hostgroup.py  item.py  macro.py  template.py  trigger.py  utils.py  zutils.py
zm/cmd/: cli.py
zm/tests/: test_zm.py
