[metadata]
name = zabbix-management
summary = Zabbix management command-line client
description-file =
    README.rst
author = Pablo Orviz Fernandez
author-email = orviz@ifca.unican.es
home-page = replace with the project page
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    zm

[entry_points]
console_scripts =
    zm = zm.cmd.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zm/locale
domain = zabbix-management

[update_catalog]
domain = zabbix-management
output_dir = zm/locale
input_file = zm/locale/zabbix-management.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zm/locale/zabbix-management.pot
